--- a/public/lang/en-US.json
+++ b/public/lang/en-US.json
@@ -1,3 +1,7 @@
 {
-	"test": "wow"
+	"categoryPlaceholder": "Showing all categories",
+	"filterPlaceholder": "Begin typing to filter by title or category",
+	"title": "Title",
+	"category": "Category",
+	"format": "Format"
 }
